# Isochronator

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: release.yml
src/: audio.rs  main.rs  program.rs  visuals.rs
