[package]
name = "isochronator"
version = "1.0.0"
edition = "2024"

[dependencies]
winit = "0.30"
cpal = "0.16"
env_logger = "0.11"
anyhow = "1.0"
pixels = "0.15"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
bytemuck = { version = "1.23", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
incremental = true
