[package]
name = "isochronator"
version = "1.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Milkshiift/Isochronator"
repository = "https://github.com/Milkshiift/Isochronator"

[dependencies]
winit = "0.30"
cpal = "0.16"
env_logger = "0.11"
anyhow = "1.0"
pixels = "0.15"
log = "0.4"
bytemuck = { version = "1.23", features = ["derive"] }
argh = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
incremental = true
