cargo-features = ["trim-paths"]

[package]
name = "isochronator"
version = "1.3.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Milkshiift/Isochronator"
repository = "https://github.com/Milkshiift/Isochronator"

[dependencies]
winit = "0.30"
cpal = "0.17"
env_logger = "0.11"
anyhow = "1.0"
log = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
argh = "0.1"
wgpu = "27"
eframe = { version = "0.33", features = ["default_fonts", "wgpu", "wayland", "x11"], default-features = false }
pollster = "0.4.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
trim-paths = "all"

[profile.dev]
opt-level = 1
incremental = true
